--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div id="声明">
       <p id="声明文字">请勿将生成的文章用于正规用途</p>
-      <p><a class="链接" href="声明.txt">声明</a></p>
+      <p><a class="链接" href="https://github.com/wanghao221/BullshitGenerator/blob/master/README.md">声明</a></p>
     </div>
     <div id="页脚">
       <p>
